[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ddat-gpf/entity_systems/entity_ability/class_activation_controller.gd" type="Script" id=1]
[ext_resource path="res://_testenv/tests_entity_ability/unit_activation_controller/test_entab_input.gd" type="Script" id=3]
[ext_resource path="res://_dev/ddat_icon.png" type="Texture" id=4]

[node name="EntityAbilityInputTest" type="Node2D"]
script = ExtResource( 3 )

[node name="SampleTargetSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 334, 831 )
texture = ExtResource( 4 )

[node name="CenterOfScreen" type="Position2D" parent="."]
position = Vector2( 960, 540 )

[node name="ActivationController" type="Node2D" parent="CenterOfScreen"]
position = Vector2( -960, -540 )
script = ExtResource( 1 )
activation_mode = 3
use_ability_action = "ui_accept"
target_clear_action = "ui_cancel"
min_hold_duration = 2.0

[node name="DebugLabel" type="Label" parent="."]
margin_left = 190.0
margin_top = 164.0
margin_right = 230.0
margin_bottom = 178.0
rect_scale = Vector2( 1.5, 1.5 )

[connection signal="activate_ability" from="CenterOfScreen/ActivationController" to="." method="_on_ActivationController_activate_ability"]
[connection signal="input_held" from="CenterOfScreen/ActivationController" to="." method="_on_ActivationController_input_held"]
